# bashlings

./: Cargo.toml  README.md
.github/workflows/: ci.yml
containers/: Containerfile
docs/: bashlings_curriculum.md  design_doc.md
puzzles/01-streams/01-redirect-to-file/: README.md  check.sh  meta.yaml  setup.sh  solution.sh
puzzles/01-streams/02-append-vs-overwrite/: README.md  check.sh  meta.yaml  setup.sh  solution.sh
puzzles/01-streams/03-redirect-stderr/: README.md  check.sh  meta.yaml  setup.sh  solution.sh
puzzles/01-streams/04-count-lines/: README.md  check.sh  meta.yaml  setup.sh  solution.sh
puzzles/01-streams/05-merge-streams/: README.md  check.sh  meta.yaml  setup.sh  solution.sh
scripts/: ci-verify-puzzles.sh
src/: cli.rs  container.rs  lib.rs  main.rs  progress.rs  puzzle.rs  ui.rs  workspace.rs
src/commands/: hint.rs  init.rs  list.rs  mod.rs  next.rs  reset.rs  retry.rs  solution.rs  start.rs  status.rs  verify.rs
tests/: container_args.rs  puzzle_loading.rs
